--- a/css/style.css
+++ b/css/style.css
@@ -482,7 +482,6 @@ header {
 
 /* The dots/bullets/indicators */
 .dot {
-  cursor: pointer;
   height: 15px;
   width: 15px;
   margin: 0 2px;
@@ -492,7 +491,7 @@ header {
   transition: background-color 0.6s ease;
 }
 
-.active, .dot:hover {
+.active{
   background-color: #717171;
 }
 
