--- a/css/style.css
+++ b/css/style.css
@@ -501,6 +501,12 @@ header {
   animation-duration: 3s;
 }
 
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
 @keyframes fade {
   from {opacity: .1}
   to {opacity: 1}
