--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ body{
 #header{
     width: 100%;
     height: 100vh;
-    background-image: url("/assets/tela.gif ");
+    background-image: url("/assets/gif-background.gif ");
     background-size: cover;
     background-position: center;
 }
@@ -415,7 +415,7 @@ nav .fa-solid{
 
 @media only screen and (max-width: 600px){
     #header{
-        background-image: url(/assets/tela.gif);
+        background-image: url(/assets/gif-background.gif);
     }
     .header-text{
         margin-top: 100%;
